--- a/todo-list-app-redux-standalone/angular.json
+++ b/todo-list-app-redux-standalone/angular.json
@@ -25,11 +25,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser-esbuild",
           "options": {
             "outputPath": "dist/todo-list-app",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
@@ -54,7 +54,9 @@
               "outputHashing": "all"
             },
             "development": {
+              "buildOptimizer": false,
               "optimization": false,
+              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
@@ -66,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "todo-list-app:build:production"
+              "browserTarget": "todo-list-app:build:production"
             },
             "development": {
-              "buildTarget": "todo-list-app:build:development"
+              "browserTarget": "todo-list-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "todo-list-app:build"
+            "browserTarget": "todo-list-app:build"
           }
         },
         "test": {
