Se adelanta TODO APP, terminar ultima seccion

--- a/todo-list-app-redux-standalone/.hintrc
+++ b/todo-list-app-redux-standalone/.hintrc
@@ -4,11 +4,6 @@
   ],
   "hints": {
     "axe/forms": "off",
-    "axe/structure": [
-      "default",
-      {
-        "listitem": "off"
-      }
-    ]
+    "axe/structure": "off"
   }
 }
