--- a/06-heroesApp/.hintrc
+++ b/06-heroesApp/.hintrc
@@ -4,6 +4,7 @@
   ],
   "hints": {
     "axe/forms": "off",
-    "axe/name-role-value": "off"
+    "axe/name-role-value": "off",
+    "axe/text-alternatives": "off"
   }
 }
